   * We put in different headers the prototype of functions with va_list 
     argument.
 * BUG :
   * The function MLV_draw_text_box_on_image() is now implemented.  
   * The function MLV_create_full_screen_window() is now implemented.  
 * Examples :
   * Add a new example medium/10_keys_code allowing to know the sym, mod
     and unicode of keyboard events.
 * packaging :
   * We normailze the debian package to follow the Debian Policy.
     Now Lintian do not produce errors.
 * Documentation:
   * We add a FAQ in the web documentation.
   * We add procedures explain how to publish a new verion of the MLV library.
 * Mac OS X 10.9 Problem :
   * We remove all inline functions to solve the flat namespace problem.
     Mac OS 10.9 Programs doesn't arrive to find function declared as 
     inlined during the exectution of the program (when the functions are not
     inlined).

mlv-0.6
  * API :
    * The sound api has been completely rewritten. 
    * Add an animation API.
    * Add an xml API to read xml file.
    * Add a path API to work with paths.
    * Lots of name uniformisations have been performed.
    * Suppresion of the anglicism evenement in the API. Only headers
      have been modified. MLV_evenement.h become MLV_event.h.
    * Simplification of the family of MLV_draw_adapted_box functions.
  * Examples :
    * Renumbering of the examples ( the numbers contain always 2 digits )
    * Add a new example explaining how to use the transparency in 
      the MLV library.
    * Add the example 07_time.c who explain how to use time functions
    * Add the example 09_full_screen.c who explain how to use the 
      fullscreen mode 
    * Add a new  example 09_library_informations explaining how to 
      get some information about the MLV librairy.
    * Add a new  example 08_zone_click explaining how to use 
      MLV_get_pixel_on_image to perform zone click.
    * Add a new  example 09_animation explaining how to use animation