@@ -1,6 +1,11 @@
-#include <stdio.h>
+#include <MLV/MLV_all.h>
 
-
+//
+// Attention ! 
+// Pour pouvoir compiler ce programme sous windows et sous macintosh,
+// il faut, pour la déclaration du main, respecter strictement la syntaxe
+// suivante :
+//
 int main( int argc, char *argv[] ){
 	//
 	// Les playlists ne sont pas encore implémentées.
@@ -8,6 +13,21 @@ int main( int argc, char *argv[] ){
 	printf(
 		"Les playlists ne sont pas encore implémentées dans la librairie MLV.\n"
 	);
+
+	MLV_create_window( "beginner - 1 - hello world", "hello world", 640, 480 );
+
+	MLV_draw_text(
+		10, 120, 
+		"Les playlists ne sont pas encore implémentées !",
+		MLV_COLOR_MAGENTA
+	);
+
+	MLV_actualise_window();
+
+	MLV_wait_seconds( 10 );
+
+	MLV_free_window();
+
 	return 0;
 }
 
